[metadata]
name = gott
version = 0.0.1
author = Antônio Maurício
author_email = toinho99@gmail.com
description = Pacote pra manipulação de funções matemáticas
long_description = file: README.md
long_description_content_type = text/markdown
url https://github.com/Mal-Ourisso/Gott
classifiers = 
	Programing Language :: Python :: 3
	License :: OSI APProved :: MIT License
	Operating System :: Os Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.9

[options.package.find]
where = src